# bootcamp_python-aula17

./: README.md  desafio.py  desafio_query.py  meubanco.db  pyproject.toml
ex/: exercicio_01.py
src/: main.py
